         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2919639#pid2919639


[B]Advanced Emulator Launcher | version 0.10.1 | xx xxxxxx 2021[/B]

FIX      Fix crash when reading a launcher NFO file when importing a launcher XML file.
         Refactored the NFO file functions a bit.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=3045045#pid3045045


[B]Advanced Emulator Launcher | version 0.9.11 | xx xxxxxx 2021[/B]

NOTE     This version is feature identical to 0.10.1


[B]Advanced Emulator Launcher | version 0.10.0 | 22 June 2021[/B]

NOTE     Python 3 version for Matrix in branch release-0.10.x-python3

FEATURE  Create a Python 3 Matrix version 0.10.x to track release 0.9.x.
         Current master branch will be release 0.11.x in Python 3.
         First release 0.9.10 Python 2 and then do the Python 3 conversion into 0.10.0.

FEATURE  Port release 0.9.10 to Python 3.


[B]Advanced Emulator Launcher | version 0.9.10 | 22 June 2021[/B]

NOTE     Python 2 version for Leia/Krypon in branch release-0.9.x-python2
         Have a look at AML code to ease the conversion.

FEATURE  Create file misc.py and refactor utils.py. Copy structure from AML.
         Replace Kodi dialog functions with wrapper functions to facilitate the transition
         to Python 3. For example, eliminate all the .decode('utf-8') functions or
         at least as much as possible.

FEATURE  Complete remove legacy Advanced Launcher launcher.xml loading/parsing functions.

FEATURE  [CORE] Disable Kodi screensaver when launching and reenable after app finishes.
         Featured ported from AML.
         See https://forum.kodi.tv/showthread.php?tid=304186&pid=2934194#pid2934194

FEATURE  Add support to remove unneeded blank spaces in `dev-core/check_line_endings.py`.

FEATURE  In the ROMs CM add a menu to edit all assets as once, including scraping
         all assets at once.
         See https://github.com/Wintermute0110/plugin.program.AEL/issues/140
